--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
-    <title>Monster Slayer</title>
+    <title>Monster Crusade</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
